Update README with simplified JavaFX instructions
Removed JavaFX SDK setup instructions and updated GitHub link.